# job-matcher-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  docker-setup.sh  main.py  pyproject.toml  requirements.txt
Scripts/: build_vectorstore.py  check_database.py  download_model.py  import_jobs.py  test_cv_parser.py  test_rag.py
data/: jobs.db
src/cv/: cv_parser.py
src/embeddings/: job_embedder.py
src/rag/: __init__.py  generator.py  retriever.py
src/vectorstore/: chroma_manager.py
