[project]
name = "job-matcher-rag"
version = "0.1.0"
description = "RAG-based job matching system using Azure OpenAI"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "openai>=1.0.0",
    "streamlit>=1.30.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pypdf>=6.1.2",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "pypdf2>=3.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
